WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211081
Text manipulation should not aggregate text from different navigation anchor elements
https://bugs.webkit.org/show_bug.cgi?id=211081
Summary
Text manipulation should not aggregate text from different navigation anchor ...
Wenson Hsieh
Reported
2020-04-27 09:45:59 PDT
<
rdar://problem/59553658
>
Attachments
Patch
(7.34 KB, patch)
2020-04-27 12:41 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-04-27 12:41:43 PDT
Created
attachment 397720
[details]
Patch
EWS
Comment 2
2020-04-27 14:12:56 PDT
Committed
r260783
: <
https://trac.webkit.org/changeset/260783
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397720
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug