Text manipulation should not aggregate text from different navigation anchor elements https://bugs.webkit.org/show_bug.cgi?id=211081 <rdar://problem/59553658>

Reviewed by Megan Gardner.

Source/WebCore:

Tweak the item boundary heuristic in `TextManipulationController::observeParagraphs` to separate text in
links and list items under navigation elements (either nav elements, or elements with the "navigation"
accessibility role) into separate paragraphs.

Also, extend the item boundary rule for button elements to apply to elements with the "button"
accessibility role as well.

Test:   TextManipulation.StartTextManipulationTreatsInlineBlockLinksAndButtonsAsParagraphs
        TextManipulation.StartTextManipulationTreatsLinksInNavigationElementsAsParagraphs

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::observeParagraphs):

Tools:

Add a new API test, and augment an existing test.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:


Canonical link: https://commits.webkit.org/223980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260783 268f45cc-cd09-0410-ab3c-d52691b4dbfc