Tools/TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm
@@ -625,7 +625,7 @@ TEST(TextManipulation, StartTextManipulationTreatsInlineBlockLinksAndButtonsAsPa
     [webView synchronouslyLoadHTMLString:@"<!DOCTYPE html>"
         "<head>"
         "    <style>"
-        "        a {"
+        "        a, span {"
         "            display: inline-block;"
         "            border: 1px blue solid;"
         "            margin-left: 1em;"
@@ -636,6 +636,54 @@ TEST(TextManipulation, StartTextManipulationTreatsInlineBlockLinksAndButtonsAsPa
         "    <button>One</button><button>Two</button>"
         "    <div><br></div>"
         "    <a href='#'>Three</a><a href='#'>Four</a>"
+        "    <span role='button'>Five</span><span role='button'>Six</span>"
+        "</body>"];
+
+    done = false;
+    [webView _startTextManipulationsWithConfiguration:nil completion:^{
+        done = true;
+    }];
+    TestWebKitAPI::Util::run(&done);
+
+    NSArray<_WKTextManipulationItem *> *items = [delegate items];
+    EXPECT_EQ(items.count, 6UL);
+    EXPECT_EQ(items[0].tokens.count, 1UL);
+    EXPECT_EQ(items[1].tokens.count, 1UL);
+    EXPECT_EQ(items[2].tokens.count, 1UL);
+    EXPECT_EQ(items[3].tokens.count, 1UL);
+    EXPECT_WK_STREQ("One", items[0].tokens[0].content);
+    EXPECT_WK_STREQ("Two", items[1].tokens[0].content);
+    EXPECT_WK_STREQ("Three", items[2].tokens[0].content);
+    EXPECT_WK_STREQ("Four", items[3].tokens[0].content);
+    EXPECT_WK_STREQ("Five", items[4].tokens[0].content);
+    EXPECT_WK_STREQ("Six", items[5].tokens[0].content);
+}
+
+TEST(TextManipulation, StartTextManipulationTreatsLinksInNavigationElementsAsParagraphs)
+{
+    auto delegate = adoptNS([[TextManipulationDelegate alloc] init]);
+    auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 400, 400)]);
+    [webView _setTextManipulationDelegate:delegate.get()];
+
+    [webView synchronouslyLoadHTMLString:@"<!DOCTYPE html>"
+        "<head>"
+        "    <style>"
+        "        li { display: inline; }"
+        "    </style>"
+        "</head>"
+        "<body>"
+        "    <div role='navigation'>"
+        "        <ul>"
+        "            <li><a href='#'>Foo</a></li>"
+        "            <li><a href='#'>Bar</a></li>"
+        "        </ul>"
+        "    </div>"
+        "    <nav>"
+        "        <ul>"
+        "            <li><a href='#'>Baz</a></li>"
+        "            <li><a href='#'>Garply</a></li>"
+        "        </ul>"
+        "    </nav>"
         "</body>"];
 
     done = false;
@@ -650,10 +698,10 @@ TEST(TextManipulation, StartTextManipulationTreatsInlineBlockLinksAndButtonsAsPa
     EXPECT_EQ(items[1].tokens.count, 1UL);
     EXPECT_EQ(items[2].tokens.count, 1UL);
     EXPECT_EQ(items[3].tokens.count, 1UL);
-    EXPECT_WK_STREQ("One", items[0].tokens[0].content);
-    EXPECT_WK_STREQ("Two", items[1].tokens[0].content);
-    EXPECT_WK_STREQ("Three", items[2].tokens[0].content);
-    EXPECT_WK_STREQ("Four", items[3].tokens[0].content);
+    EXPECT_WK_STREQ("Foo", items[0].tokens[0].content);
+    EXPECT_WK_STREQ("Bar", items[1].tokens[0].content);
+    EXPECT_WK_STREQ("Baz", items[2].tokens[0].content);
+    EXPECT_WK_STREQ("Garply", items[3].tokens[0].content);
 }
 
 struct Token {
